@@ -86,6 +86,11 @@ See also `w3m-search-engine-alist'."
   :group 'w3m
   :type 'string)
 
+(defcustom w3m-search-word-at-point t
+  "*Non-nil means that the word at point is used as initial string."
+  :group 'w3m
+  :type 'boolean)
+
 (defun w3m-search-escape-query-string (str &optional coding)
   (mapconcat
    (lambda (s)
@@ -107,8 +112,12 @@ engine deinfed in `w3m-search-engine-alist'.  Otherwise use
 	       w3m-search-engine-alist nil t)
 	    w3m-search-default-engine))
 	  (default (thing-at-point 'word))
-	  (prompt (format "%s search: " engine))
-	  (query (read-string prompt default)))
+	  (prompt (if (and default (not w3m-search-word-at-point))
+		      (format "%s search (default %s): " engine default)
+		    (format "%s search: " engine)))
+	  (query (if w3m-search-word-at-point
+		     (read-string prompt default)
+		   (read-string prompt nil nil default))))
      (list (if (string= engine "")
 	       w3m-search-default-engine
 	     engine)
